<resources>
    <string name="app_name" translatable="false">instafans</string>
    <string name="developer_id" translatable="false">Appus+Studio</string>
    <string name="ok">ok</string>
    <string name="cancel">Cancel</string>
    <string name="rating_list">Rating List</string>
    <string name="my_profile">My Profile</string>
    <string name="buy_pro">Buy PRO</string>
    <string name="log_out">Log Out</string>
    <string name="please_login">You are not logged in. Log in please.</string>
    <string name="invite">Invite</string>
    <string name="permission_error">Please allow access to your Facebook information</string>
    <string name="no_followers_users_message">Your followers haven\'t installed Likulator yet</string>
    <string name="no_following_users_message">Your following users haven\'t installed Likulator yet</string>
    <string name="do_you_want_to_see_more_our_apps">Do you want to see more our apps?</string>
    <string name="do_you_like_our_app">Do you like our app?</string>
    <string name="please_rate_app_in_play_market">Please rate app in Play Market</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="no_thanks">No, thanks</string>
    <string name="rate">Rate</string>
    <string name="login_big">Login</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="please_send_feedback">Please send feedback</string>
    <string name="feedback_receiver">support@appus.pro</string>
    <string name="feedback_subject">Likulator feedback</string>
    <string name="feedback_hint">Type message here</string>
    <string name="login_with_instagram">Log In with Instagram</string>
    <string name="show_in_instagram">Show in Instagram</string>
    <string name="login">Login</string>
    <string name="guest">Guest</string>
    <string name="oauth_error">Can\'t authorise</string>
    <string name="authorization">Authorization</string>
    <string name="buy_pro_text">We are happy to announce, that buying our outstanding PRO version only for 0,99$ you can count your likes without annoying advertisement!\nVideos, photos, posts- make sure that every like is counted and let your friends know who is the most popular here!</string>
    <string name="restore_text"> Restore</string>
    <string name="block">Block</string>
    <string name="unblock">Unblock</string>
    <string name="likulator_title" translatable="false">Likulator</string>
    <string name="friends">Friends</string>
    <string name="world">World</string>
    <string name="city">City</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="likes">Likes</string>
    <string name="rating">Rating</string>
    <string name="calculate">Calculate My Likes</string>
    <string name="drawer_open" translatable="false">Drawer open</string>
    <string name="drawer_close" translatable="false">Drawer close</string>
    <string name="likes_statisctics">Likes statistics</string>
    <string name="delete_my_profile">Delete My Profile</string>
    <string name="total">Total</string>
    <string name="share">Share</string>
    <string name="search">Search</string>
    <string name="options">Options</string>
    <string name="blocked">Blocked</string>
    <string name="photos">Photos</string>
    <string name="posts">Posts</string>
    <string name="videos">Videos</string>
    <string name="carousels">Carousels</string>
    <string name="getting_likes">Getting likes</string>
    <string name="getting_photos">Getting photos</string>
    <string name="getting_videos">Getting videos</string>
    <string name="getting_followers">Getting followers</string>
    <string name="getting_following">Getting following</string>
    <string name="getting_carousels">Getting carousels</string>
    <string name="action_canceled">Action canceled…</string>
    <string name="top">Top</string>
    <string name="AvenirNext_DemiBold" translatable="false">AvenirNext-DemiBold.ttf</string>
    <string name="AvenirNext_Regular" translatable="false">AvenirNext-Regular.ttf</string>
    <string name="AvenirNext_Medium" translatable="false">AvenirNext-Medium.ttf</string>
    <string name="Roboto_Medium" translatable="false">Roboto-Medium.ttf</string>
    <string name="acc_pub" translatable="false">ca-app-pub-3091286968802858~9589403073</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3091286968802858/2832423033</string>
    <string name="interstitial_ad_unit_id" translatable="false">ca-app-pub-3091286968802858/8000989236</string>
    <string name="rewarded_video_ad_unit_id" translatable="false">ca-app-pub-3091286968802858/9199177372</string>
    <string name="terms_of_service_title">Terms of Service\nand Privacy Policy</string>
    <string name="agree">I AGREE</string>
    <string name="terms_of_service_and_privacy_policy">By using this application you agree to the<b>Terms of \n Service</b> and <b>Privacy Policy</b></string>
    <string name="media_count">Media count</string>
    <string name="followers_count">Followers count</string>
</resources>