<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_profile_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/snow"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_user_number"
                fontPath="@string/AvenirNext_DemiBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/dark_jungle_green"
                android:textSize="16sp"
                tools:ignore="MissingPrefix"
                tools:text="100" />

            <TextView
                android:id="@+id/tv_rating_label"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/rating"
                android:textAllCaps="true"
                android:textColor="@color/dark_jungle_green"
                android:textSize="12sp"
                tools:visibility="visible" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="80dp"
            android:layout_height="80dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_avatar"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_my_profile"
                android:visibility="visible" />

        </FrameLayout>

        <LinearLayout
            android:id="@+id/ll_likes_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="?selectableItemBackground"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_like_count"
                fontPath="@string/AvenirNext_DemiBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="1000000"
                android:textColor="@color/dark_jungle_green"
                android:textSize="16sp"
                tools:ignore="MissingPrefix" />

            <TextView
                android:id="@+id/tv_likes_label"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/likes"
                android:textAllCaps="true"
                android:textColor="@color/dark_jungle_green"
                android:textSize="12sp"
                tools:visibility="visible" />

        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/abl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/snow">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/main.collapsing"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:expandedTitleMarginEnd="64dp"
                app:expandedTitleMarginStart="48dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fitsSystemWindows="true"
                    app:layout_collapseMode="parallax">

                    <TextView
                        android:id="@+id/tx_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="8dp"
                        android:textColor="@color/dark_jungle_green"
                        android:textSize="18sp"
                        tools:text="Some Name" />

                    <Button
                        android:id="@+id/btn_login"
                        style="@style/InstaButton.Reverse"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/default_margin"
                        android:layout_marginRight="@dimen/default_margin"
                        android:padding="@dimen/default_text_padding"
                        android:text="@string/login_with_instagram"
                        android:textAllCaps="false"
                        android:visibility="invisible" />

                    <LinearLayout
                        android:id="@+id/ll_user_buttons"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tx_name"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btn_calculate"
                            style="@style/InstaButton"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="@dimen/default_margin"
                            android:layout_marginRight="@dimen/default_margin"
                            android:layout_weight="1"
                            android:text="@string/calculate"
                            android:textAllCaps="true" />

                        <ImageButton
                            android:id="@+id/ib_share"
                            style="@style/InstaButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="@dimen/default_margin"
                            android:layout_marginRight="@dimen/default_margin"
                            android:paddingBottom="@dimen/default_margin"
                            android:paddingLeft="@dimen/default_margin_x2"
                            android:paddingRight="@dimen/default_margin_x2"
                            android:paddingTop="@dimen/default_margin"
                            android:src="@drawable/ic_share" />

                    </LinearLayout>

                </RelativeLayout>

            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.design.widget.TabLayout
                android:id="@+id/sliding_tabs"
                style="@style/InstaTabLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/snow" />

            <android.support.v4.view.ViewPager
                android:id="@+id/vp_main_pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>

</LinearLayout>



